# idropr-API-server

./: .gitignore  Cargo.toml  README.md  env.config
api/: Cargo.toml
api/schema/: idropr.mwb  idropr.mwb.bak
api/src/: main.rs
api/src/api/: mod.rs
api/src/api/health/: mod.rs
api/src/api/public/: mod.rs
api/src/api/secrets/: mod.rs  secrets_get.rs  secrets_post.rs
api/src/enums/: access_level.rs  auth_context.rs  authorization_status.rs  connection_status.rs  error.rs  expired_status.rs  master_password.rs  mod.rs  permission.rs  primary_command.rs  rate_limit_status.rs  refresh_status.rs  role.rs  rows_updated.rs  session_controller_status.rs  system_flag.rs  user.rs  user_status.rs  user_type.rs  uuid.rs  verification_status.rs
api/src/services/: mod.rs  rate_limit_service.rs  route_lock_service.rs
api/src/traits/: from_base_64.rs  has_permission.rs  mod.rs  to_auth_token.rs  to_authorization_status.rs  to_base_64.rs  to_key_set.rs  to_number.rs  to_permission.rs  to_server_mode.rs  to_system_flag.rs  to_user_account_status.rs  to_user_type.rs  to_verification_status.rs  u128_bits.rs  verify_password.rs
api/src/types/: api_response.rs  api_server.rs  app_state.rs  authorization_token.rs  cli.rs  database_connection.rs  env.rs  garbage_collector_interval.rs  header_settings.rs  key_set.rs  mod.rs  permission_check.rs  permissions_check_helpers.rs  rate_limit_sweeper.rs  route_collection.rs  secret.rs  secret_controller.rs  session.rs  session_controller.rs  session_sweeper.rs  settings.rs  software_access.rs  user_permissions.rs
schema/: idropr.mwb  (+1 more)
(+55 files in other folders)
