[package]
name = "idropr-server"
version = "0.0.3"
edition = "2024"

authors = ["Josh Briggs", "Josh Briggs <josh@derivemore.com"]

[dependencies]
actix-cors = "0.7.1"
actix-rt = "2.10.0"
actix-web = "4.9.0"
aes-gcm = "0.10.3"
bcrypt = "0.17.0"
blake3 = "1.8.2"
chrono = "0.4.40"
clap = { version = "4.5.43", features = ["derive"] }
derive_more = { version = "1.0.0", features = ["from"] }
dotenv = "0.15.0"
futures = "0.3.31"
rand = "0.9.2"
rate-limit = { path = "../rate-limit" }
serde = { version = "1.0.218", features = ["derive"] }
sqlx = { version = "0.8.3", features = ["mysql", "runtime-async-std", "time","chrono","tls-rustls"] }

#codegen-units = 1
#lto = false
#RUSTFLAGS="-C target-cpu=native" cargo build --release
